--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My project</title>
     <link rel="stylesheet" href="assets/materialize/css/materialize.min.css">
+    <title>My project</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/util.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
-  <nav>
+  <!-- navbar section start -->
+  <nav class="white z-depth-1">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="#!" class="blue-text">Home</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger blue-text"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
@@ -24,12 +26,47 @@
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
+    <li><div class="user-view">
+      <div class="background">
+        <img src="assets/images/download.jpg" class="w-100">
+      </div>
+      <a href="#user"><img class="circle" src="assets/images/download.png"></a>
+      <a href="#name"><span class="white-text name">Maxwell Gucci</span></a>
+      <a href="#email"><span class="white-text email">Gucciganglouisgang@gmail.com</span></a>
+      </div>
+    </li>
+    <li>
+      <a href="#!">
+        <i class="material-icons">insert_link</i>
+        AQ fast learn
+      </a>
+    </li>
+    <li><a href="#!"><i class="material-icons">insert_link</i>Gucci</a></li>
+    <li><div class="divider"></div></li>
+    <li><a class="subheader">Pages</a></li>
+    <li><a class="waves-effect" href="#!">Home</a></li>
+    <li><a class="waves-effect" href="#!">Users</a></li>
   </ul>
 
+  <!-- navbar section end -->
+
+
+  <!-- home section start -->
+  
+    <section class="flex-c-m flex-col sizeful p-r-20 p-l-20 p-t-100">
+      <img src="assets/images/download2122.jpg" class="w-full max-w-200 filter_shadow">
+        <a class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded-pill">
+          Start Gaming
+        </a>
+        <a class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded-pill">
+          User Manager
+        </a>
+    </section>
+
+
+
+
+  <!-- home section end -->
 
 
     <script src="assets/materialize/js/materialize.min.js"></script>
